refactor: use astro integration standards

--- a/examples/example-site/src/layouts/Layout.astro
+++ b/examples/example-site/src/layouts/Layout.astro
@@ -7,9 +7,8 @@ interface Props {
 }
 
 const { title: pageTitle } = Astro.props;
-const canonicalUrl = Astro.url; // requires `site` in astro.config.mjs
+const canonicalUrl = Astro.url;
 ---
-
 <!doctype html>
 <html lang="en">
   <Visor
