--- a/examples/example-site/src/layouts/Layout.astro
+++ b/examples/example-site/src/layouts/Layout.astro
@@ -1,21 +1,30 @@
 ---
+import {Visor} from '@binz/visor';
+import logoSvgSrc from '../images/Logo.svg';
+
 interface Props {
-	title: string;
+  title: string;
 }
 
-const { title } = Astro.props;
+const { title: pageTitle } = Astro.props;
+const canonicalUrl = Astro.url; // requires `site` in astro.config.mjs
 ---
 
 <!doctype html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>{title}</title>
-	</head>
+  <Visor
+    author={{
+      name: "Joe Bloggs",
+      twitterHandle: "@joe_blogs"
+    }}
+    canonicalURL={canonicalUrl}
+    description="Built with visor"
+    defaultKeywords={[]}
+    siteName="Example Site"
+    siteFaviconSvg={logoSvgSrc}
+    socialImagePath="/social.jpg"
+    title={pageTitle}
+  />
 	<body>
 		<slot />
 	</body>
