--- a/packages/visor/src/components/Head.astro
+++ b/packages/visor/src/components/Head.astro
@@ -66,7 +66,7 @@ const appleTouchIcon = await getImage({
 })
 // const faviconSvg = await getImage({ src: siteFaviconSvg, format: 'svg' })
 
-const canonicalImageSrc = new URL(socialImage, Astro.site);
+const canonicalImageSrc = new URL(socialImage, canonicalURL)
 const sanitizedDescription = description.replace(/(<([^>]+)>)/gi, '');
 
 const keywords = Array.from(
