feat: deploy demo to netlify

--- a/examples/example-site/src/layouts/Layout.astro
+++ b/examples/example-site/src/layouts/Layout.astro
@@ -24,6 +24,7 @@ const canonicalUrl = Astro.url; // requires `site` in astro.config.mjs
     siteFaviconSvg={logoSvgSrc}
     socialImagePath="/social.jpg"
     title={pageTitle}
+		pwa
   />
 	<body>
 		<slot />
